# A_star_with_OpenCV

./: .gitignore  CMakeLists.txt  README.md  map.board
include/: aStar.h  cell.h  doMap.h  show.h
src/: CMakeLists.txt  aStar.cpp  cell.cpp  doMap.cpp  main.cpp  show.cpp
